<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>htc</groupId>
  <artifactId>customerinformation-service-test</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>customerinformation-service-test</name>
  <url>http://www.hightech-corp.com</url>
  
   <!-- Properties-->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <jmeterTimeout>60</jmeterTimeout>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-core</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.jmeter</groupId>
      <artifactId>ApacheJMeter_core</artifactId>
      <version>5.3</version>
    </dependency>

    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-core</artifactId>
      <version>1.24.1</version>
    </dependency>

    <dependency>
      <groupId>com.blazemeter</groupId>
      <artifactId>jmeter-plugins-random-csv-data-set</artifactId>
      <version>0.6</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.lazerycode.jmeter</groupId>
        <artifactId>jmeter-maven-plugin</artifactId>
        <version>3.1.2</version>
        <executions>
          <!-- Generate JMeter configuration -->
          <execution>
            <id>configuration</id>
            <goals>
              <goal>configure</goal>
            </goals>
          </execution>
          <!-- Run JMeter tests -->
          <execution>
            <id>jmeter-tests</id>
            <phase>verify</phase>
            <goals>
              <goal>jmeter</goal>
            </goals>
            <configuration>
              <generateReports>true</generateReports>
            </configuration>
          </execution>
          <!-- Fail build on errors in test -->
          <execution>
            <id>jmeter-check-results</id>
            <phase>verify</phase>
            <goals>
              <goal>results</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <propertiesUser>
            <threadgroup.count>${threadCount}</threadgroup.count>
            <threadgroup.rampup>${rampupTime}</threadgroup.rampup>
            <threadgroup.duration>${durationSecond}</threadgroup.duration>
            <jmeter.save.saveservice.output_format>csv</jmeter.save.saveservice.output_format>
            <jmeter.save.saveservice.bytes>true</jmeter.save.saveservice.bytes>
            <jmeter.save.saveservice.label>true</jmeter.save.saveservice.label>
            <jmeter.save.saveservice.latency>true</jmeter.save.saveservice.latency>
            <jmeter.save.saveservice.response_code>true</jmeter.save.saveservice.response_code>
            <jmeter.save.saveservice.response_message>true</jmeter.save.saveservice.response_message>
            <jmeter.save.saveservice.successful>true</jmeter.save.saveservice.successful>
            <jmeter.save.saveservice.thread_counts>true</jmeter.save.saveservice.thread_counts>
            <jmeter.save.saveservice.thread_name>true</jmeter.save.saveservice.thread_name>
            <jmeter.save.saveservice.time>true</jmeter.save.saveservice.time>
          </propertiesUser>
          <jmeterExtensions>
            <artifact>kg.apc:jmeter-plugins-casutg:2.6</artifact>
            <artifact>com.blazemeter:jmeter-plugins-random-csv-data-set:0.6</artifact>
          </jmeterExtensions>
          <excludedArtifacts>
            <exclusion>org.slf4j:slf4j-nop</exclusion>
            <exclusion>avalon-framework:*</exclusion>
            <!--<exclusion>org.apache.tika:*</exclusion>-->
            <exclusion>excalibur-datasource:excalibur-datasource</exclusion>
            <exclusion>excalibur-instrument:excalibur-instrument</exclusion>
            <exclusion>excalibur-logger:excalibur-logger</exclusion>
            <exclusion>excalibur-pool:*</exclusion>
            <exclusion>org.beanshell:bsh:jar:2.0b5</exclusion>
          </excludedArtifacts>
          <!-- We configure build to fail when error rate exceeds 1%-->
          <errorRateThresholdInPercent>1</errorRateThresholdInPercent>
          <propertiesJMeter>
            <BUILD_TAG>${project.version}</BUILD_TAG>
          </propertiesJMeter>
          <jMeterProcessJVMSettings>
            <arguments>
              <argument>-XX:MaxMetaspaceSize=256m</argument>
              <argument>-Xmx2048m</argument>
              <argument>-Xms2048m</argument>
            </arguments>
          </jMeterProcessJVMSettings>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
          <configuration>
            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
            <testFailureIgnore>true</testFailureIgnore>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>

